--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
     }
   }
 </style>
-
+<app-widget-host></app-widget-host>
 <main class="main">
   <div class="content">
     <div class="left-side">
