add news widget

--- a/src/app/widgets/components/widget-host/widget-host.component.html
+++ b/src/app/widgets/components/widget-host/widget-host.component.html
@@ -1,1 +1,3 @@
-<ng-container *ngComponentOutlet="newsWidget"></ng-container>
+<app-widget-container>
+    <ng-container *ngComponentOutlet="newsWidget"></ng-container>
+</app-widget-container>
