fixed news emote

--- a/src/app/widgets/components/widget-host/widget-host.component.html
+++ b/src/app/widgets/components/widget-host/widget-host.component.html
@@ -1,3 +1,6 @@
 <app-widget-container>
-    <ng-container *ngComponentOutlet="newsWidget"></ng-container>
+    <ng-template #vc></ng-template>
+</app-widget-container>
+<app-widget-container>
+    <ng-template #vc2></ng-template>
 </app-widget-container>
